# macos-virt

./: .bazelrc  README.md  WORKSPACE
clover/: BUILD.bazel  clover.vmdk.tpl  config.plist
linuxkit/: BUILD.bazel  boot.go  linuxkit.yaml  tap0.sh
linuxkit/boot/: BUILD.bazel  boot.go  cpuinfo.go  hugepages.go  modules.go  nat.go  qemu.go  utils.go  vm.go
linuxkit/boot/cpuinfo/: BUILD.bazel  cpuinfo.go
linuxkit/boot/vm/: BUILD.bazel  vm.go
macos/: BUILD.bazel  mkimage.sh  mkinstaller.sh
opencore/: BUILD.bazel  config.amd.plist  config.intel.plist  config.plist  opencore.vmdk.tpl  startup.nsh
