load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "booter",
    srcs = ["boot.go"],
    importpath = "github.com/steeve/macos-virt/linuxkit",
    goos = "linux",
    goarch = "amd64",
)

genrule(
    name = "image",
    srcs = [
        "//linuxkit/boot:booter",
        "//opencore:image",
        "linuxkit.yaml",
    ],
    outs = ["linukit.img"],
    cmd = """\
sed \
    -e 's#@USER_HOME@#~#' \
    -e 's#@BOOTLOADER@#$(location //opencore:image)#' \
    -e 's#@MACOS_BOOT@#$(location //linuxkit/boot:booter)#' \
    < $(location linuxkit.yaml) > tmp.yaml

$(location @com_github_linuxkit_linuxkit//file) build \
    -format raw-efi \
    -dir $(RULEDIR) \
    -name boot \
    tmp.yaml

mv $(RULEDIR)/boot-efi.img $(@)
""",
    tools = [
        "@com_github_linuxkit_linuxkit//file",
    ],
    visibility = ["//visibility:public"],
)
