sh_binary(
    name = "mkimage",
    srcs = ["mkimage.sh"],
    args = [
        "$(location @com_github_magervalp_autodmg//:installesdtodmg)",
    ],
    data = [
        "@com_github_magervalp_autodmg//:installesdtodmg",
    ],
)

sh_binary(
    name = "mkinstaller",
    srcs = ["mkinstaller.sh"],
    data = [
        "@com_github_munki_macadmin_scripts//:installinstallmacos",
    ],
)
