load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "booter",
    srcs = [
        "boot.go",
        "modules.go",
        "nat.go",
        "qemu.go",
        "utils.go",
    ],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/steeve/macos-virt/linuxkit/boot",
    visibility = ["//linuxkit:__subpackages__"],
    deps = [
        "//linuxkit/boot/vm:go_default_library",
    ],
)
